Finished Problem Set 1 Solutions, modified a few things on all pages (meta stuff), also added a 'Body_style' sheet that goes to all pages, rather than having one stylesheet per page.

--- a/LimitTechniques.html
+++ b/LimitTechniques.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="description" content="Free Single Variable Calculus University course">
+        <meta name="keywords" content="MathWise, Institute, MathWise Institute, Calculus, Limits, Techniques">
+        <meta name="author" content="Agustin Garcia Flores">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Evaluating Limits | Single Variable Calculus | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="UndefinedLimits_Style.css">
+        <link rel="stylesheet" href="Body_style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -207,11 +211,11 @@
                         </li>
                     </ol>
                     <h4>Lesson Conclusion</h4>
-                    That concludes the section on limits. More practice can be found in <a href="ProblemSet1.pdf">Problem Set 1</a>, and the solutions to it found <a href="">here</a>. Most of the mathematical
+                    That concludes the section on limits. More practice can be found in <a href="ProblemSet1.pdf">Problem Set 1</a>, and the solutions to it found <a href="ProblemSet1Solutions.pdf">here</a>. Most of the mathematical
                     understanding comes from the problem sets, while the lessons are mainly the theory. Additional resources on limits can be found below as well.
                     <br><br>
                     <h4>Problem Set 1</h4>
-                    <button onclick="window.location.href='ProblemSet1.pdf'" class="previous_button">Problem Set 1</button> <button onclick="window.location.href=''" class="previous_button">Problem Set 1 Solutions</button>
+                    <button onclick="window.location.href='ProblemSet1.pdf'" class="previous_button">Problem Set 1</button> <button onclick="window.location.href='ProblemSet1Solutions.pdf'" class="previous_button">Problem Set 1 Solutions</button>
                     <h4>Additional Resources</h4>
                     <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/ryLdyDrBfvI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/kAv5pahIevE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
