--- a/about.html
+++ b/about.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="MathWise Institute About Page">
+        <meta name="keywords" content="MathWise, Institute, MathWise Institute, About">
+        <meta name="author" content="Agustin Garcia Flores">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             About | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
+        <link rel="stylesheet" href="Body_style.css">
     </head>
     <body class="Whole">
         <div>
