--- a/calculus1.html
+++ b/calculus1.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="description" content="Free Single Variable Calculus University course">
+        <meta name="keywords" content="MathWise, Institute, MathWise Institute, Calculus">
+        <meta name="author" content="Agustin Garcia Flores">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Single Variable Calculus | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="calculus1_style.css">
+        <link rel="stylesheet" href="Body_style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async
@@ -57,63 +61,71 @@
                 </p>
             </div>
             <div>
-                <h2>Lesson Plan:</h2>
-                <ol id="Lesson_plan">
-                    <li class="Lesson"><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
-                        <ol start="1">
-                            <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
-                            <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
-                            <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits</a></li>
-                            <li><a class="lesson_links" href="LimitTechniques.html">Evaluating Limits</a></li>
-                            <br>
-                        </ol>
-                    <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
-                        <ol start="5">
-                            <li><a class="lesson_links" href="#">Derivatives, Rate of Change, Slope, and Velocity</a></li>
-                            <li><a class="lesson_links" href="#">Derivatives of Products, Quotients, and Trigonometric Functions</a></li>
-                            <li><a class="lesson_links" href="#">Chain Rule, Higher Derivatives</a></li>
-                            <li><a class="lesson_links" href="#">Implicit Differentiation, Inverses</a></li>
-                            <li><a class="lesson_links" href="#">Exponential and Logarithmic Functions</a></li>
-                            <li><a class="lesson_links" href="#">Logarithmic Differentiation, Hyperbolic Functions</a></li>
-                            <br>
-                        </ol>
-                    <li class="Lesson"><a class="lesson_links" href="#">Differentiation and it's Applications</a></li>
-                        <ol start="11">
-                            <li><a class="lesson_links" href="#">Linear and Quadratic Approximations</a></li>
-                            <li><a class="lesson_links" href="#">Curve Sketching</a></li>
-                            <li><a class="lesson_links" href="#">Second Derivative Test, Max-min Problems</a></li>
-                            <li><a class="lesson_links" href="#">Related Rates</a></li>
-                            <li><a class="lesson_links" href="#">Newton's Method and Other Applications</a></li>
-                            <li><a class="lesson_links" href="#">Mean Value Theorem, Inequalities</a></li>
-                            <li><a class="lesson_links" href="#">Differentials, Antiderivatives</a></li>
-                            <li><a class="lesson_links" href="#">Differential Equations, Separable-variable Equations</a></li>
-                            <br>
-                        </ol>
-                    <li class="Lesson"><a class="lesson_links" href="#">Integration</a></li>
-                        <ol start="19">
-                            <li><a class="lesson_links" href="#">Definite Integrals</a></li>
-                            <li><a class="lesson_links" href="#">First Fundamental Theorem of Calculus</a></li>
-                            <li><a class="lesson_links" href="#">Second Fundamental Theorem of Calculus</a></li>
-                            <li><a class="lesson_links" href="#">Applications to Logarithms and Geometry</a></li>
-                            <li><a class="lesson_links" href="#">Volumes by Disks and Shells</a></li>
-                            <li><a class="lesson_links" href="#">Work, Average Value, Probability</a></li>
-                            <li><a class="lesson_links" href="#">Numerical Integration, Riemann Sum</a></li>
-                            <br>
-                        </ol>
-                    <li class="Lesson"><a class="lesson_links" href="#">Integration Techniques</a></li>
-                        <ol start="26">
-                            <li><a class="lesson_links" href="#">U-Substitution and Trigonometric Integrals</a></li>
-                            <li><a class="lesson_links" href="#">Inverse Substitution, Completing the Square</a></li>
-                            <li><a class="lesson_links" href="#">Partial Fractions</a></li>
-                            <li><a class="lesson_links" href="#">Integration by Parts, Reductions Formulae</a></li>
-                            <li><a class="lesson_links" href="#">Parametric Equations, Arclength, Surface Area</a></li>
-                            <li><a class="lesson_links" href="#">Polar Coordinates, Area in Polar Coordinates</a></li>
-                            <li><a class="lesson_links" href="#">Indeterminant Forms: L'Hôspital's Rule</a></li>
-                            <li><a class="lesson_links" href="#">Improper Integrals</a></li>
-                            <li><a class="lesson_links" href="#">Infinite Series and Convergence Tests</a></li>
-                            <li><a class="lesson_links" href="#">Taylor's Series</a></li>
-                        </ol>
-                </ol>
+                <div>
+                    <h2>Lesson Plan:</h2>
+                    <ol id="Lesson_plan">
+                        <li class="Lesson"><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
+                            <ol start="1">
+                                <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
+                                <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
+                                <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits</a></li>
+                                <li><a class="lesson_links" href="LimitTechniques.html">Evaluating Limits</a></li>
+                                <br>
+                            </ol>
+                        <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
+                            <ol start="5">
+                                <li><a class="lesson_links" href="#">Derivatives, Rate of Change, Slope, and Velocity</a></li>
+                                <li><a class="lesson_links" href="#">Derivatives of Products, Quotients, and Trigonometric Functions</a></li>
+                                <li><a class="lesson_links" href="#">Chain Rule, Higher Derivatives</a></li>
+                                <li><a class="lesson_links" href="#">Implicit Differentiation, Inverses</a></li>
+                                <li><a class="lesson_links" href="#">Exponential and Logarithmic Functions</a></li>
+                                <li><a class="lesson_links" href="#">Logarithmic Differentiation, Hyperbolic Functions</a></li>
+                                <br>
+                            </ol>
+                        <li class="Lesson"><a class="lesson_links" href="#">Differentiation and it's Applications</a></li>
+                            <ol start="11">
+                                <li><a class="lesson_links" href="#">Linear and Quadratic Approximations</a></li>
+                                <li><a class="lesson_links" href="#">Curve Sketching</a></li>
+                                <li><a class="lesson_links" href="#">Second Derivative Test, Max-min Problems</a></li>
+                                <li><a class="lesson_links" href="#">Related Rates</a></li>
+                                <li><a class="lesson_links" href="#">Newton's Method and Other Applications</a></li>
+                                <li><a class="lesson_links" href="#">Mean Value Theorem, Inequalities</a></li>
+                                <li><a class="lesson_links" href="#">Differentials, Antiderivatives</a></li>
+                                <li><a class="lesson_links" href="#">Differential Equations, Separable-variable Equations</a></li>
+                                <br>
+                            </ol>
+                        <li class="Lesson"><a class="lesson_links" href="#">Integration</a></li>
+                            <ol start="19">
+                                <li><a class="lesson_links" href="#">Definite Integrals</a></li>
+                                <li><a class="lesson_links" href="#">First Fundamental Theorem of Calculus</a></li>
+                                <li><a class="lesson_links" href="#">Second Fundamental Theorem of Calculus</a></li>
+                                <li><a class="lesson_links" href="#">Applications to Logarithms and Geometry</a></li>
+                                <li><a class="lesson_links" href="#">Volumes by Disks and Shells</a></li>
+                                <li><a class="lesson_links" href="#">Work, Average Value, Probability</a></li>
+                                <li><a class="lesson_links" href="#">Numerical Integration, Riemann Sum</a></li>
+                                <br>
+                            </ol>
+                        <li class="Lesson"><a class="lesson_links" href="#">Integration Techniques</a></li>
+                            <ol start="26">
+                                <li><a class="lesson_links" href="#">U-Substitution and Trigonometric Integrals</a></li>
+                                <li><a class="lesson_links" href="#">Inverse Substitution, Completing the Square</a></li>
+                                <li><a class="lesson_links" href="#">Partial Fractions</a></li>
+                                <li><a class="lesson_links" href="#">Integration by Parts, Reductions Formulae</a></li>
+                                <li><a class="lesson_links" href="#">Parametric Equations, Arclength, Surface Area</a></li>
+                                <li><a class="lesson_links" href="#">Polar Coordinates, Area in Polar Coordinates</a></li>
+                                <li><a class="lesson_links" href="#">Indeterminant Forms: L'Hôspital's Rule</a></li>
+                                <li><a class="lesson_links" href="#">Improper Integrals</a></li>
+                                <li><a class="lesson_links" href="#">Infinite Series and Convergence Tests</a></li>
+                                <li><a class="lesson_links" href="#">Taylor's Series</a></li>
+                            </ol>
+                    </ol>
+                </div>
+                <div>
+                    <h2>Problem Sets:</h2>
+                    <ol>
+                        <li><a class="lesson_links" href="ProblemSet1.pdf">Problem Set 1: Limits</a> (<a class="lesson_links" href="ProblemSet1Solutions.pdf">Solutions</a>)</li>
+                    </ol>
+                </div>
             </div>
             <br/>
             <p>
