--- a/UndefinedLimits.html
+++ b/UndefinedLimits.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="description" content="Free Single Variable Calculus University course">
+        <meta name="keywords" content="MathWise, Institute, MathWise Institute, Calculus, Limits, Undefined">
+        <meta name="author" content="Agustin Garcia Flores">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits | Single Variable Calculus | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="UndefinedLimits_Style.css">
+        <link rel="stylesheet" href="Body_style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
