Added a dark mode to the site and made some accomodations for mobile device displays. Also started a new page 'mathematical induction' that I hadn't planned for initially. Changed some of the figures so they're visisble in dark mode.

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -94,8 +94,8 @@
                 <button onclick="window.location.href='calculus1.html'" class="previous_button">
                     Previous: Single Variable Calculus
                 </button>
-                <button onclick="window.location.href='LimitOfAFunction.html'" class="next_button">
-                    Next: Limit of a Function
+                <button onclick="window.location.href='MathInduction.html'" class="next_button">
+                    Next: Mathematical Induction
                 </button>
             </div>
             <br><br>
