--- a/LimitOfAFunction.html
+++ b/LimitOfAFunction.html
@@ -164,8 +164,8 @@
                         from each side, \(0\) from the left and \(-4\) from the right, the limit as \(x\) approaches \(3\) from both sides is <b>undefined</b>. 
                         This is because a limit must approach the same value from the left and the right, as stated before. We will go deeper into undefined limits
                         in the next section so don't worry about this one too much for now.
-                        <br><br>
                     </div>
+                    <br>
                     Provided that a limit exists, it may ease the evaluation if the function under cosideration is split into a sum, product, or quotient. The rules
                     for evaluating the original limit are as follows:
                     \[
@@ -176,7 +176,7 @@
                         \end{align*}
                     \]
                     A more extensive list of useful limit properties and formulae (including the ones
-                    already mentioned) can be found <a href="Limit_Formulas.pdf">here</a>. These formulae can be very useful when solving more complicated limit problems.
+                    already mentioned) can be found <b><a class="lesson_links" href="Limit_Formulas.pdf">here</a></b>. These formulae can be very useful when solving more complicated limit problems.
                     <br><br>
                     In conclusion, when taking a limit of a function you are looking for the value the function approaches as the independent variable, in many cases \(x\),
                     approaches some value \(\alpha\), either from the left, right, or both sides simultaneously. In the following section we will go over discontinuities around
@@ -184,8 +184,8 @@
                 </p>
             </div>
             <div>
-                <button onclick="window.location.href='Functions_TheBasics.html'" class="previous_button">
-                    Previous: Functions: The Basics
+                <button onclick="window.location.href='MathInduction.html'" class="previous_button">
+                    Previous: Mathematical Induction
                 </button>
                 <button onclick="window.location.href='UndefinedLimits.html'" class="next_button">
                     Next: Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits
