--- a/calculus1.html
+++ b/calculus1.html
@@ -60,20 +60,21 @@
                     Below, you will find the lesson plan for the course. We hope it is manageable, efficient, and rewarding.
                 </p>
             </div>
-            <div>
-                <div>
+            <div class="container">
+                <div class="left">
                     <h2>Lesson Plan:</h2>
                     <ol id="Lesson_plan">
-                        <li class="Lesson"><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
+                        <li class="Lesson"><a class="lesson_links" href="Functions_TheBasics.html">Functions, Induction, and Limits</a></li>
                             <ol start="1">
                                 <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
+                                <li><a class="lesson_links" href="MathInduction.html">Mathematical Induction</a></li>
                                 <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
                                 <li><a class="lesson_links" href="UndefinedLimits.html">Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits</a></li>
                                 <li><a class="lesson_links" href="LimitTechniques.html">Evaluating Limits</a></li>
                                 <br>
                             </ol>
                         <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
-                            <ol start="5">
+                            <ol start="6">
                                 <li><a class="lesson_links" href="#">Derivatives, Rate of Change, Slope, and Velocity</a></li>
                                 <li><a class="lesson_links" href="#">Derivatives of Products, Quotients, and Trigonometric Functions</a></li>
                                 <li><a class="lesson_links" href="#">Chain Rule, Higher Derivatives</a></li>
@@ -83,7 +84,7 @@
                                 <br>
                             </ol>
                         <li class="Lesson"><a class="lesson_links" href="#">Differentiation and it's Applications</a></li>
-                            <ol start="11">
+                            <ol start="12">
                                 <li><a class="lesson_links" href="#">Linear and Quadratic Approximations</a></li>
                                 <li><a class="lesson_links" href="#">Curve Sketching</a></li>
                                 <li><a class="lesson_links" href="#">Second Derivative Test, Max-min Problems</a></li>
@@ -95,7 +96,7 @@
                                 <br>
                             </ol>
                         <li class="Lesson"><a class="lesson_links" href="#">Integration</a></li>
-                            <ol start="19">
+                            <ol start="20">
                                 <li><a class="lesson_links" href="#">Definite Integrals</a></li>
                                 <li><a class="lesson_links" href="#">First Fundamental Theorem of Calculus</a></li>
                                 <li><a class="lesson_links" href="#">Second Fundamental Theorem of Calculus</a></li>
@@ -106,7 +107,7 @@
                                 <br>
                             </ol>
                         <li class="Lesson"><a class="lesson_links" href="#">Integration Techniques</a></li>
-                            <ol start="26">
+                            <ol start="27">
                                 <li><a class="lesson_links" href="#">U-Substitution and Trigonometric Integrals</a></li>
                                 <li><a class="lesson_links" href="#">Inverse Substitution, Completing the Square</a></li>
                                 <li><a class="lesson_links" href="#">Partial Fractions</a></li>
@@ -120,7 +121,7 @@
                             </ol>
                     </ol>
                 </div>
-                <div>
+                <div class="right">
                     <h2>Problem Sets:</h2>
                     <ol>
                         <li><a class="lesson_links" href="ProblemSet1.pdf">Problem Set 1: Limits</a> (<a class="lesson_links" href="ProblemSet1Solutions.pdf">Solutions</a>)</li>
