--- a/index.html
+++ b/index.html
@@ -32,31 +32,33 @@
         </div>
         <hr class="Title_Border">
         <div class="Body">
-            <div class="Intro">
-                <p>
-                    MathWise Insititute is designed to help people around the world develop a strong understanding for a variety of mathematical
-                    subjects. Each course goes through the material that would typically be covered in a university environment, and more! The primary
-                    goal is for you, the reader, to be able to learn at your own pace. A lesson plan can be found when clicking on any of the available
-                    courses. At the end of each lesson, a problem set will be assigned in order to test what's
-                    been leaned. The problem sets will be split up into three sections: easy, moderate, and challenging. The goal is to build confidence
-                    before facing a challenging problem. A file with the problem set solutions will also be available at the end of each lesson, should it
-                    be necessary. Explore the courses and have fun growing your mathematical mind, we hope you enjoy!
-                </p>
-            </div>
-            <div class="Subject_Field">
-                <h3>
-                    Available courses:
-                    <ul>
-                        <li><a class="Subject_Links" href="calculus1.html">Single Variable Calculus (work in progress)</a></li>
-                        </br>
-                        <li>Multi Variable Calculus (not yet developed)</li>
-                        </br>
-                        <li>Differential Equations (not yet developed)</li>
-                        </br>
-                        <li>Linear Algebra (not yet developed)</li>
-                        </br>
-                    </ul>
-                </h3>
+            <div class="container">
+                <div class="Intro">
+                    <p>
+                        MathWise Insititute is designed to help people around the world develop a strong understanding for a variety of mathematical
+                        subjects. Each course goes through the material that would typically be covered in a university environment, and more! The primary
+                        goal is for you, the reader, to be able to learn at your own pace. A lesson plan can be found when clicking on any of the available
+                        courses. At the end of each lesson, a problem set will be assigned in order to test what's
+                        been leaned. The problem sets will be split up into three sections: easy, moderate, and challenging. The goal is to build confidence
+                        before facing a challenging problem. A file with the problem set solutions will also be available at the end of each lesson, should it
+                        be necessary. Explore the courses and have fun growing your mathematical mind, we hope you enjoy!
+                    </p>
+                </div>
+                <div class="Subject_Field">
+                    <h3>
+                        Available courses:
+                        <ul>
+                            <li><a class="Subject_Links" href="calculus1.html">Single Variable Calculus (work in progress)</a></li>
+                            </br>
+                            <li>Multi Variable Calculus (not yet developed)</li>
+                            </br>
+                            <li>Differential Equations (not yet developed)</li>
+                            </br>
+                            <li>Linear Algebra (not yet developed)</li>
+                            </br>
+                        </ul>
+                    </h3>
+                </div>
             </div>
             <div class="Resources">
                 These are a few resources that we have used while going through these courses, they are definitely worth your awareness:
