Finished the 'mathematical induction' page, changed some of the figures back and modified the css to invert them in dark mode.

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -61,7 +61,7 @@
                     also known as a <b>surjective function</b> or <b>onto</b>, is a function where every output value comes From
                     at least one input value. A <b>bijection</b> is a function that is both an injection and a surjection.
                     <br><br>
-                    <img class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
+                    <img id="invert" class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
                     <br><br>
                     From the image above:
                     <ul>
