--- a/LimitOfAFunction.html
+++ b/LimitOfAFunction.html
@@ -54,7 +54,7 @@
                     To get a better understanding of a limit, let's investigate the behavior of the function \(p\)
                     defined by \(p(x)=(x-3)^3+2\) for values of \(x\) near \(3\):
                     <br><br>
-                    <img class="table" src="Limits_Table1.png" alt="A table of x and y values used to recognize a pattern for limits">
+                    <img id="invert" class="table" src="Limits_Table1.png" alt="A table of x and y values used to recognize a pattern for limits">
                     <br>
                     The table shows the values of \(x\) approaching \(3\) from the left and values approaching from the right.
                     We see that when \(x\) is close to \(3\), on either side of \(3\), \(p(x)\) approaches 2. Thus,
