updated the style of all in-page links and buttons

--- a/calculus1.html
+++ b/calculus1.html
@@ -43,11 +43,11 @@
         </div>
         <hr id="Title_Border2">
         <div class="Body">
-            <h2 class="heading">
+            <h2>
                 <button onclick="window.location.href='calculus1.html'" class="heading_button">
                     Single Variable Calculus
                 </button>
-                <button onclick="window.location.href='Functions_TheBasics.html'" class="next_button">
+                <button onclick="window.location.href='Functions_TheBasics.html'" class="start_button">
                     Get Started
                 </button>
             </h2>
