Finished the 'mathematical induction' page and created a new page for lesson 2: derivatives.

--- a/MathInduction.html
+++ b/MathInduction.html
@@ -153,7 +153,20 @@
                         By mathematical induction, \(P(n)\) is true for all nonnegative integers \(n\).
                     </div>
                     <br>
-
+                    There is another proof technique, called <b>strong induction</b>, that is basically mathematical induction but it proves the statement
+                    for all integer values <i>up to</i> \(k\) and \(k+1\). Thus, the inductive hypothesis assumes that the statement is true for \(P(n)\),
+                    \(P(n+1)\),...,\(P(k)\). However, strong induction is not anticipated in this course and therfore will not be covered. Below are
+                    additional resources on mathematical induction and strong induction.
+                    <br><br>
+                    <u><b>Additional Resources:</b></u>
+                    <br><br>
+                    <a class="lesson_links" href="https://learnmathonline.org/DiscreteMath/MathematicalInduction.html">Mathematical induction resource</a>
+                    <br>
+                    <a class="lesson_links" href="https://learnmathonline.org/DiscreteMath/StrongInduction.html">Strong induction resource</a>
+                    <br>
+                    <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/JTgWbq-S6Zc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/IdTaA6iz3Mo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="230" height="auto" src="https://www.youtube-nocookie.com/embed/XnV8GAuAqJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </p>
             </div>
             <div>
