--- a/LimitTechniques.html
+++ b/LimitTechniques.html
@@ -237,8 +237,8 @@
                 <button onclick="window.location.href='UndefinedLimits.html'" class="previous_button">
                     Previous: Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits
                 </button>
-                <button onclick="window.location.href='#'" class="next_button">
-                    Next: Lesson 2: Derivatives
+                <button onclick="window.location.href='derivative.html'" class="next_button">
+                    Next: <b>Lesson 2: Derivatives</b>
                 </button>
             </div>
             <br><br>
