--- a/calculus1.html
+++ b/calculus1.html
@@ -84,9 +84,9 @@
                                 <li><a class="lesson_links" href="LimitTechniques.html">Evaluating Limits</a></li>
                                 <br>
                             </ol>
-                        <li class="Lesson"><a class="lesson_links" href="#">Derivatives</a></li>
+                        <li class="Lesson"><a class="lesson_links" href="derivatives.html">Derivatives</a></li>
                             <ol start="6">
-                                <li><a class="lesson_links" href="#">Derivatives, Rate of Change, Slope, and Velocity</a></li>
+                                <li><a class="lesson_links" href="derivatives.html">Derivatives, Rate of Change, Slope, and Velocity</a></li>
                                 <li><a class="lesson_links" href="#">Derivatives of Products, Quotients, and Trigonometric Functions</a></li>
                                 <li><a class="lesson_links" href="#">Chain Rule, Higher Derivatives</a></li>
                                 <li><a class="lesson_links" href="#">Implicit Differentiation, Inverses</a></li>
